--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,3 +1,5 @@
+@use "../utilities/variables";
+
 .cuerpoIndex {
-    background-color: black;
-  }
+  background-color: variables.$color-background;
+}
