--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -1,66 +1,68 @@
+@use "../utilities/variables";
+
 .bodyAbout {
-    background-image: url(../assets/img/side_wave_background_2.jpg);
-    background-size: cover;
-    background-repeat: no-repeat; 
-  }
-  
-  .contenedorAbout {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center; 
-    gap: 20px;
-    max-width: 1200px; 
-    margin: 0 auto; 
-    padding: 20px;
-  }
-  
-  .sobreNosotros {
-    border-style: ridge;
-    padding: 20px;
-    border-radius: 41px;
-    background-color: rgba(17, 70, 67, 0.43);
-    width: 50%; 
-    height: 900px; 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .imgAbout {
-    width: 50%; 
-    height: 900px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden; 
-  }
-  
-  .imgAbout img {
-    width: 100%; 
-    height: 100%; 
-    object-fit: cover; 
-    border-radius: 41px; 
-  }
-  
-  .tituloAbout {
-    font-size: 4.75rem;
-    margin-top: -80px;
-    color: #ffffff;
-    padding: 20px; 
-    text-align: center;
-  }
-  
-  .textoAbout {
-    padding: 0px 20px; 
-    margin-left: 10px;
-    color: #ffffff;
-    font-family: "Cormorant Garamond", serif;
-    font-size: 25px;
-  }
-  
-  .decoMain {
-    border-style: outset;
-    border-radius: 10px;
-    padding: 20px;
-    margin: 5px;
-  }
+  background-image: url(../assets/img/side_wave_background_2.jpg);
+  background-size: cover;
+  background-repeat: no-repeat; 
+}
+
+.contenedorAbout {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+  gap: 20px;
+  max-width: 1200px; 
+  margin: 0 auto; 
+  padding: 20px;
+}
+
+.sobreNosotros {
+  border-style: ridge;
+  padding: 20px;
+  border-radius: 41px;
+  background-color: rgba(17, 70, 67, 0.43);
+  width: 50%; 
+  height: 900px; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.imgAbout {
+  width: 50%; 
+  height: 900px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden; 
+}
+
+.imgAbout img {
+  width: 100%; 
+  height: 100%; 
+  object-fit: cover; 
+  border-radius: 41px; 
+}
+
+.tituloAbout {
+  font-size: 4.75rem;
+  margin-top: -80px;
+  color: variables.$color-text;
+  padding: 20px; 
+  text-align: center;
+}
+
+.textoAbout {
+  padding: 0px 20px; 
+  margin-left: 10px;
+  color: variables.$color-text;
+  font-family: variables.$font-primary;
+  font-size: 25px;
+}
+
+.decoMain {
+  border-style: outset;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 5px;
+}
