--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,43 +1,44 @@
+@use "../utilities/variables";
+@use "../utilities/mixins";
+
 .contenedor-main {
-    position: relative; 
-    max-width: 100%;
-    height: 600px; 
-    overflow: hidden;
-  }
-  
-  .presentacionImg {
-    width: 100%;
-    height: 100%; 
-    object-fit: cover; 
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1; 
-  }
-  
-  .tituloAventura {
-    position: absolute;
-    bottom: 120px; 
-    left: 50%;
-    transform: translateX(-50%); 
-    font-size: 48px;
-    color: #ffffff;
-    text-align: center;
-    z-index: 2; 
-    width: 80%;
-    font-weight: bold;
-  }
-  
-  .contenedor-boton {
-    position: absolute;
-    bottom: 40px; 
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 2; 
-  }
-  
-  .contenedor-boton button:hover {
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3); 
-    transform: scale(1.05); 
-    background-color: #5a7639; 
-  }
+  position: relative; 
+  max-width: 100%;
+  height: 600px; 
+  overflow: hidden;
+}
+
+.presentacionImg {
+  width: 100%;
+  height: 100%; 
+  object-fit: cover; 
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1; 
+}
+
+.tituloAventura {
+  position: absolute;
+  bottom: 120px; 
+  left: 50%;
+  transform: translateX(-50%); 
+  font-size: 48px;
+  color: variables.$color-text;
+  text-align: center;
+  z-index: 2; 
+  width: 80%;
+  font-weight: bold;
+}
+
+.contenedor-boton {
+  position: absolute;
+  bottom: 40px; 
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 2; 
+}
+
+.contenedor-boton button:hover {
+  @include mixins.hover-effect(variables.$color-primary);
+}
