--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -1,3 +1,5 @@
+@use "../utilities/variables";
+@use "../utilities/mixins"; // Asegúrate de importar el archivo de mixins aquí
 @use "../base/typography";
 
 .nav-container {
@@ -12,19 +14,19 @@
   align-items: center; 
   width: 100%; 
   height: 100px;
-  color: #ffffff;
+  color: variables.$color-text;
   font-size: 1.125rem;
   font-weight: 700;
-  font-family: typography.$font-primary;
+  font-family: variables.$font-primary;
   padding: 0 20px;
 }
 
 .navegacionUno {
-  background-color: #475D2E;
+  background-color: variables.$color-secondary;
 }
 
 .navegacionDos {
-  background-color: #003532;
+  background-color: variables.$color-primary;
 }
 
 .logo {
@@ -48,11 +50,9 @@
 }
 
 .lista-nav li a {
-  color: #ffffff;
+  color: variables.$color-text;
   text-decoration: none;
   padding: 10px;
-}
 
-.lista-nav li a:hover {
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.1));
+  @include mixins.hover-effect(variables.$color-primary);
 }
