--- a/scss/layout/_tours.scss
+++ b/scss/layout/_tours.scss
@@ -1,83 +1,82 @@
+@use "../utilities/variables";
+@use "../utilities/mixins";
+
 .bodyTours {
-    background-image: url(../assets/img/deg2.png);
-    background-size: cover;
-    background-repeat: no-repeat; 
-  }
-  
-  .contenedorCards {
-    display: grid; 
-    grid-template-columns: repeat(3, 1fr); 
-    gap: 20px; 
-    padding: 20px; 
-    max-width: 1200px; 
-    margin: 0 auto; 
-  }
-  
-  .cardTours {
-    display: flex; 
-    flex-direction: column; 
-    background-color: #ffffff;
-    font-family: "Lora", serif;
-    border: 1px solid #ccc;
-    text-align: center;
-    color: #000000;
-    overflow: hidden;
-    height: 500px; 
-    width: 100%; 
-    border-radius: 20px;
-  }
-  
-  .cardTours:hover {
-    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
-    transform: scale(1.05); 
-    opacity: 0.9; 
-  }
-  
-  .cardTours .imagen {
-    width: 100%;
-    height: 60%; 
-  }
-  
-  .cardTours .imagen img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; 
-  }
-  
-  .cardTours .contenidoTours {
-    width: 100%;
-    height: 55%; 
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: left;
-  }
-  
-  .tituloCard {
-    text-align: center;
-    margin-bottom: 10px;
-  }
-  
-  .textoTours {
-    display: flex;
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: center; 
-    font-family: "Lora", serif;
-    color: #ffffff;
-    padding: 30px; 
-    text-align: center;
-    margin: 20px auto; 
-    max-width: 1100px; 
-    line-height: 1.6; 
-  }
-  
-  .list-tours {
-    text-align: center;
-    list-style: none;
-    width: 100%;
-    height: 100px;
-    justify-content: center;
-    margin-bottom: 30px;
-  }
+  background-image: url(../assets/img/deg2.png);
+  background-size: cover;
+  background-repeat: no-repeat; 
+}
+
+.contenedorCards {
+  display: grid; 
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 20px; 
+  padding: 20px; 
+  max-width: 1200px; 
+  margin: 0 auto; 
+}
+
+.cardTours {
+  display: flex; 
+  flex-direction: column; 
+  background-color: variables.$color-text;
+  font-family: variables.$font-secondary;
+  border: 1px solid #ccc;
+  text-align: center;
+  color: variables.$color-background;
+  overflow: hidden;
+  height: 500px; 
+  width: 100%; 
+  border-radius: 20px;
+
+  @include mixins.hover-effect(variables.$color-primary);
+}
+
+.cardTours .imagen {
+  width: 100%;
+  height: 60%; 
+}
+
+.cardTours .imagen img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; 
+}
+
+.cardTours .contenidoTours {
+  width: 100%;
+  height: 55%; 
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+}
+
+.tituloCard {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.textoTours {
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  justify-content: center; 
+  font-family: variables.$font-secondary;
+  color: variables.$color-text;
+  padding: 30px; 
+  text-align: center;
+  margin: 20px auto; 
+  max-width: 1100px; 
+  line-height: 1.6; 
+}
+
+.list-tours {
+  text-align: center;
+  list-style: none;
+  width: 100%;
+  height: 100px;
+  justify-content: center;
+  margin-bottom: 30px;
+}
