--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -11,7 +11,7 @@
   font-family: variables.$font-secondary;
 }
 
-// Definición de estilos de texto generales
+// estilos de texto generales
 h2 {
   @extend %heading-style;
 }
