--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -1,5 +1,5 @@
 @use "../utilities/variables";
-@use "../utilities/mixins"; // Asegúrate de importar el archivo de mixins aquí
+@use "../utilities/mixins"; 
 @use "../base/typography";
 
 .nav-container {
