--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -1,11 +1,11 @@
-// Mixins para media queries reutilizables
+// Mixins para media queries
 @mixin respond-to($max-width) {
   @media (max-width: $max-width) {
     @content;
   }
 }
 
-// Mixin para hover effects
+// Mixin hover
 @mixin hover-effect($color) {
   &:hover {
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
