--- a/css/style.css
+++ b/css/style.css
@@ -18,31 +18,31 @@ h3 {
   font-weight: 800;
 }
 
-.nav-container {
+.navbar {
   display: flex;
   align-items: center;
   gap: 10px;
-}
-
-.navegacionUno, .navegacionDos {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 100px;
-  color: #ffffff;
-  font-size: 1.125rem;
-  font-weight: 700;
-  font-family: "Cormorant Garamond", serif;
-  padding: 0 20px;
-}
-
-.navegacionUno {
-  background-color: #475D2E;
+  padding: 20px;
 }
 
 .navegacionDos {
   background-color: #003532;
+  color: #ffffff;
+  font-size: 1.125rem;
+  font-weight: 700;
+  font-family: "Cormorant Garamond", serif;
+}
+.navegacionDos .nav-link {
+  color: #ffffff;
+  font-size: 1.125rem;
+  font-weight: 700;
+  text-decoration: none;
+}
+.navegacionDos .nav-link:hover {
+  color: #475D2E;
+}
+.navegacionDos .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%2855, 53, 47, 0.5%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
 
 .logo {
@@ -51,23 +51,17 @@ h3 {
   object-fit: contain;
 }
 
-.nav-links {
-  margin-left: auto;
-}
-
 .lista-nav {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
   list-style: none;
-  padding: 20px;
   margin: 10px;
+  padding: 0;
 }
 
 .lista-nav li a {
-  color: #ffffff;
-  text-decoration: none;
   padding: 10px;
 }
 .lista-nav li a:hover {
@@ -333,8 +327,12 @@ h3 {
 }
 
 .contenedorForm {
-  width: 50%;
+  width: 100%;
   text-align: left;
+}
+
+.tituloUno {
+  margin-bottom: 20px;
 }
 
 .listaContacto {
@@ -345,11 +343,14 @@ h3 {
   display: block;
   font-size: 24px;
   margin-bottom: 5px;
+  width: 100%;
+  max-width: 400px;
 }
 
-.listaContacto input {
-  width: 425px;
-  height: 48px;
+.input-largo,
+.textarea-largo {
+  width: 100%;
+  max-width: 400px;
   background-color: #ffffff;
   border: none;
   padding: 10px;
@@ -357,7 +358,7 @@ h3 {
   border-radius: 5px;
 }
 
-#mensaje {
+.textarea-largo {
   height: 195px;
 }
 
@@ -370,19 +371,6 @@ input[type=submit] {
   width: 200px;
   font-size: 12px;
   padding: 5px 10px;
-}
-
-.modifImagen {
-  width: 500px;
-  height: 400px;
-  border-radius: 20px;
-  object-fit: cover;
-  margin-left: 30px;
-}
-
-.modifImagen {
-  border-radius: 10px;
-  margin: 10px;
 }
 
 .footer-cont {
@@ -412,41 +400,6 @@ input[type=submit] {
   text-decoration: none;
 }
 
-@media (max-width: 768px) {
-  .navegacionUno, .navegacionDos {
-    flex-direction: column;
-    align-items: center;
-    height: auto;
-    padding: 10px 0;
-  }
-  .lista-nav {
-    justify-content: center;
-    gap: 15px;
-    max-width: 100%;
-  }
-  .lista-nav li {
-    flex: 1 1 45%;
-    text-align: center;
-    max-width: 180px;
-  }
-}
-@media (max-width: 480px) {
-  .navegacionUno, .navegacionDos {
-    padding: 10px;
-  }
-  .lista-nav {
-    justify-content: center;
-    gap: 10px;
-    flex-wrap: wrap;
-  }
-  .lista-nav li {
-    flex: 1 1 30%;
-    max-width: 150px;
-  }
-  .lista-nav li a {
-    padding: 8px 0;
-  }
-}
 @media (max-width: 768px) {
   .contenedorCards {
     grid-template-columns: repeat(2, 1fr);
