--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -2,31 +2,34 @@
 @use "../utilities/mixins"; 
 @use "../base/typography";
 
-.nav-container {
+.navbar {
   display: flex;
   align-items: center;
   gap: 10px;
-}
-
-.navegacionUno, .navegacionDos {
-  display: flex;
-  justify-content: space-between; 
-  align-items: center; 
-  width: 100%; 
-  height: 100px;
-  color: variables.$color-text;
-  font-size: 1.125rem;
-  font-weight: 700;
-  font-family: variables.$font-primary;
-  padding: 0 20px;
-}
-
-.navegacionUno {
-  background-color: variables.$color-secondary;
+  padding: 20px;
 }
 
 .navegacionDos {
   background-color: variables.$color-primary;
+  color: variables.$color-text;
+  font-size: 1.125rem;
+  font-weight: 700;
+  font-family: variables.$font-primary;
+
+  .nav-link {
+    color: variables.$color-text;
+    font-size: 1.125rem;
+    font-weight: 700;
+    text-decoration: none;
+
+    &:hover {
+      color: variables.$color-secondary;
+    }
+  }
+
+  .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%2855, 53, 47, 0.5%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  }
 }
 
 .logo {
@@ -35,23 +38,17 @@
   object-fit: contain;
 }
 
-.nav-links {
-  margin-left: auto;
-}
-
 .lista-nav {
   display: flex;
   flex-wrap: wrap; 
   justify-content: center; 
   gap: 20px;
   list-style: none;
-  padding: 20px;
   margin: 10px;
+  padding: 0;
 }
 
 .lista-nav li a {
-  color: variables.$color-text;
-  text-decoration: none;
   padding: 10px;
 
   @include mixins.hover-effect(variables.$color-primary);
