--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -1,5 +1,19 @@
 @use "../utilities/variables";
 
 .cuerpoIndex {
-  background-color: variables.$color-background;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.contenedor-main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.presentacionImg {
+  height: 100%;
+  object-fit: cover;
 }
