--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -4,6 +4,10 @@ $color-secondary: #475D2E;
 $color-background: #000000;
 $color-text: #ffffff;
 
+// Variables de colores de texto
+$color-text-primary: #ffffff; // Color de texto principal
+$color-text-secondary: #cccccc; // Color de texto secundario
+
 // Variables de fuentes
 $font-primary: "Cormorant Garamond", serif;
 $font-secondary: "Lora", serif;
