--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Lora:ital,wght@0,400..700;1,400..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;700&family=Lora:wght@400;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -138,6 +139,10 @@ h3 {
   background-image: url(../assets/img/side_wave_background_2.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .contenedorAbout {
@@ -148,6 +153,7 @@ h3 {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+  flex: 1;
 }
 
 .sobreNosotros {
@@ -155,16 +161,12 @@ h3 {
   padding: 20px;
   border-radius: 41px;
   background-color: rgba(17, 70, 67, 0.43);
-  width: 50%;
-  height: 900px;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .imgAbout {
-  width: 50%;
-  height: 900px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -179,19 +181,57 @@ h3 {
 }
 
 .tituloAbout {
-  font-size: 4.75rem;
-  margin-top: -80px;
-  color: #ffffff;
-  padding: 20px;
-  text-align: center;
+  font-family: Cormorant Garamond, serif !important;
+  font-size: 4rem !important;
+  color: #ffffff !important;
+  text-align: center !important;
+  margin-bottom: 1rem !important;
+}
+@media (min-width: 1200px) {
+  .tituloAbout {
+    font-size: 4rem;
+  }
+}
+@media (max-width: 1199.98px) {
+  .tituloAbout {
+    font-size: 2rem;
+  }
+}
+
+.subtUno {
+  font-family: Lora, serif !important;
+  font-size: 2rem !important;
+  color: #cccccc !important;
+  text-align: center !important;
+  margin-bottom: 1rem !important;
+}
+@media (min-width: 1200px) {
+  .subtUno {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 1199.98px) {
+  .subtUno {
+    font-size: 1.25rem;
+  }
 }
 
 .textoAbout {
-  padding: 0px 20px;
-  margin-left: 10px;
-  color: #ffffff;
-  font-family: "Cormorant Garamond", serif;
-  font-size: 25px;
+  font-family: Lora, serif !important;
+  font-size: 1.5rem !important;
+  color: #ffffff !important;
+  text-align: justify !important;
+  margin-bottom: 1rem !important;
+}
+@media (min-width: 1200px) {
+  .textoAbout {
+    font-size: 1.25rem;
+  }
+}
+@media (max-width: 1199.98px) {
+  .textoAbout {
+    font-size: 0.875rem;
+  }
 }
 
 .decoMain {
