--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -14,3 +14,12 @@
     opacity: 0.9;
   }
 }
+
+@mixin responsive-font-size($large, $small) {
+  @media (min-width: 1200px) {
+    font-size: $large;
+  }
+  @media (max-width: 1199.98px) {
+    font-size: $small;
+  }
+}
