--- a/scss/layout/_destinos.scss
+++ b/scss/layout/_destinos.scss
@@ -1,28 +1,34 @@
 @use "../utilities/variables";
+@use "../utilities/mixins";
 
 .bodyDestinos {
   background-image: url(../assets/img/Deg1.png);
   background-size: cover;
   background-repeat: no-repeat; 
+  min-height: 100vh;
 }
 
 .mainDestinos {
-  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .tituloUno {
-  font-size: 4.75rem;
-  margin-top: 0px;
-  color: variables.$color-text;
-  padding: 20px; 
-  margin-left: 10px;
+  font-family: #{variables.$font-primary} !important;
+  font-size: 4rem !important;
+  color: #{variables.$color-text-primary} !important;
+  text-align: center !important;
+  margin-bottom: 1rem !important;
+  @include mixins.responsive-font-size(4rem, 2rem);
 }
 
 .subtUno {
-  font-size: 2.8125rem;
-  margin-top: 0%;
-  padding: 0px; 
-  margin-left: 10px;
-  margin-bottom: 20px;
-  text-align: center;
+  font-family: #{variables.$font-secondary} !important;
+  font-size: 2rem !important;
+  color: #{variables.$color-text-secondary} !important;
+  text-align: center !important;
+  margin-bottom: 1rem !important;
+  @include mixins.responsive-font-size(2rem, 1.25rem);
 }
