--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -8,6 +8,15 @@
   overflow: hidden;
 }
 
+.tituloHeader {
+  font-family: #{variables.$font-primary} !important;
+  font-size: 2rem !important;
+  color: #{variables.$color-text-primary} !important;
+  text-align: center !important;
+  margin-top: 1rem !important;
+  @include mixins.responsive-font-size(3rem, 2rem);
+}
+
 .presentacionImg {
   width: 100%;
   height: 100%; 
