--- a/scss/layout/_tours.scss
+++ b/scss/layout/_tours.scss
@@ -5,6 +5,7 @@
   background-image: url(../assets/img/deg2.png);
   background-size: cover;
   background-repeat: no-repeat; 
+  min-height: 100vh;
 }
 
 .contenedorCards {
